# pri-lab-streamlit

./: .gitattributes  .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
artifacts/default/: anchor_candidates.parquet  edges.parquet  page_segments.parquet  pages.parquet  pri_scores.parquet  run_metrics.json  segment_metrics.parquet  url_metrics.parquet
artifacts/default/scenarios/: scenario_1_exact_focus_edges.parquet  scenario_1_exact_focus_pri.parquet  scenario_2_balanced_mix_edges.parquet  scenario_2_balanced_mix_pri.parquet  scenario_3_diversity_first_edges.parquet  scenario_3_diversity_first_pri.parquet  scenario_pri_comparison.parquet
artifacts/lbc/: edges.parquet  page_segments.parquet  pages.parquet  pri_scores.parquet  real_metrics_1m.parquet  real_voitures_206k.parquet  segment_metrics.parquet  url_metrics.parquet
configs/: default.toml  lbc.toml
data/: audit_maillage_interne.json  audit_templates_diff.json  maillage_model.json
src/pri_lab/: __init__.py  cli.py  config.py  dashboard.py  dashboard_app.py  lbc_edges.py  lbc_generator.py  metrics.py  pipeline.py  synthetic.py
tests/: test_anchor_scenarios.py  test_build_edges.py  test_dashboard.py  test_export_report.py  test_integration_pipeline.py  test_perf_smoke.py  test_prepare_dashboard_data.py  test_prepare_outlinks.py  test_prepare_pages.py
tests/fixtures/: arbo_small.json  outlinks_small.csv
