[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pri-lab"
version = "0.1.0"
description = "Local PRi R&D lab powered by Polars and igraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "igraph>=0.11.8",
  "plotly>=5.18.0",
  "polars>=1.17.1",
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]

[project.scripts]
pri-lab = "pri_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
